--- a/index.html
+++ b/index.html
@@ -3,51 +3,50 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>AgriNexus Netlify + Logs + 이미지 진단</title>
+  <title>AgriNexus 작물 진단 + PDF 보고서 + Firebase 저장</title>
   <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@3.11.0"></script>
   <script src="https://cdn.jsdelivr.net/npm/@tensorflow-models/coco-ssd@2.2.2"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-database-compat.js"></script>
   <style>
-    body { font-family: Arial; background: #f5fafd; padding: 2rem; text-align: center; }
-    input, button { padding: 0.8rem; font-size: 1rem; margin: 0.5rem; width: 90%; max-width: 500px; border-radius: 6px; border: 1px solid #ccc; }
-    canvas, img { margin-top: 1rem; max-width: 100%; border-radius: 8px; }
-    .log { color: #007c4d; margin-top: 1rem; font-weight: bold; }
+    body { font-family: Arial; background: #f8f9fa; text-align: center; padding: 2rem; }
+    input, button { padding: 0.8rem; width: 90%; max-width: 500px; font-size: 1rem; margin: 0.5rem; border-radius: 6px; border: 1px solid #ccc; }
+    canvas, img { max-width: 100%; margin-top: 1rem; border-radius: 8px; }
+    .log { color: #007c4d; font-weight: bold; margin-top: 1rem; }
   </style>
 </head>
 <body>
 
-  <h1>🚀 AgriNexus Netlify 플랫폼 + 보고서 로그 + 이미지 AI 진단</h1>
+  <h1>🌿 AgriNexus 작물 이미지 진단 + PDF 보고서 + Firebase 저장</h1>
 
-  <div>
-    <h3>📄 보고서 다운로드 로그 분석</h3>
-    <button onclick="logDownload()">📥 보고서 다운로드</button>
-    <div class="log" id="logResult"></div>
-  </div>
+  <input type="file" id="imageUpload" accept="image/*" />
+  <img id="preview" style="display:none;" />
+  <canvas id="canvas" width="640" height="480" style="display:none;"></canvas>
+  <input id="email" placeholder="📧 보고서 전송 이메일 입력" />
+  <button onclick="detectAndReport()">🔎 진단 + PDF 생성 + 저장</button>
 
-  <div>
-    <h3>🌿 작물 이미지 업로드 기반 진단</h3>
-    <input type="file" id="imageUpload" accept="image/*" />
-    <img id="preview" style="display:none;" />
-    <canvas id="canvas" width="640" height="480" style="display:none;"></canvas>
-    <button onclick="detectImage()">🔎 AI 작물 이미지 진단</button>
-    <div class="log" id="aiResult"></div>
-  </div>
+  <div class="log" id="resultLog"></div>
 
   <script>
-    function logDownload() {
-      const time = new Date().toLocaleString();
-      localStorage.setItem("lastDownload", time);
-      document.getElementById("logResult").innerText = "📌 최근 보고서 다운로드 시각: " + time;
-    }
+    const firebaseConfig = {
+      apiKey: "YOUR_API_KEY",
+      authDomain: "your-project.firebaseapp.com",
+      databaseURL: "https://your-project.firebaseio.com",
+      projectId: "your-project"
+    };
+    firebase.initializeApp(firebaseConfig);
+    const db = firebase.database();
 
     let model;
-
-    async function detectImage() {
+    async function detectAndReport() {
       const file = document.getElementById("imageUpload").files[0];
+      const email = document.getElementById("email").value;
       const img = document.getElementById("preview");
       const canvas = document.getElementById("canvas");
       const ctx = canvas.getContext("2d");
 
-      if (!file) return alert("이미지를 업로드해주세요.");
+      if (!file || !email) return alert("이미지와 이메일을 입력해주세요.");
 
       const reader = new FileReader();
       reader.onload = async () => {
@@ -56,7 +55,8 @@
           canvas.style.display = "block";
           ctx.drawImage(img, 0, 0, canvas.width, canvas.height);
 
-          if (!model) model = await cocoSsd.load();
+          if (!model) model = await cocoSsd.load(); // 교체 가능
+
           const predictions = await model.detect(canvas);
           predictions.forEach(pred => {
             ctx.strokeStyle = "#007c4d";
@@ -65,7 +65,38 @@
             ctx.fillStyle = "#007c4d";
             ctx.fillText(pred.class + " " + Math.round(pred.score * 100) + "%", pred.bbox[0], pred.bbox[1] - 5);
           });
-          document.getElementById("aiResult").innerText = `예측된 항목 수: ${predictions.length}`;
+
+          const timestamp = new Date().toISOString();
+          const resultText = `예측 수: ${predictions.length}, 시각: ${timestamp}`;
+          document.getElementById("resultLog").innerText = resultText;
+
+          // Firebase 저장
+          db.ref("diagnostics").push({
+            email,
+            predictionCount: predictions.length,
+            time: timestamp
+          });
+
+          // PDF 생성
+          const { jsPDF } = window.jspdf;
+          const doc = new jsPDF();
+          doc.text("🌿 AgriNexus 작물 이미지 진단 리포트", 20, 20);
+          doc.text("이메일: " + email, 20, 30);
+          doc.text("예측 수: " + predictions.length, 20, 40);
+          doc.text("발행 시각: " + timestamp, 20, 50);
+          doc.save("AgriNexus_Detection_Report.pdf");
+
+          // 서버로 전송 (선택)
+          /*
+          const blob = doc.output("blob");
+          const formData = new FormData();
+          formData.append("pdf", blob, "report.pdf");
+          formData.append("email", email);
+          await fetch("https://your-server.com/send-report", {
+            method: "POST",
+            body: formData
+          });
+          */
         };
       };
       reader.readAsDataURL(file);
