--- a/index.html
+++ b/index.html
@@ -3,47 +3,88 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>AgriNexus 실시간 이미지 작물 예측 + Netlify 배포</title>
-  <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@3.21.0/dist/tf.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/@tensorflow-models/mobilenet@2.1.0"></script>
+  <title>AgriNexus Custom Crop Model + PDF + Firebase</title>
+  <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@3.21.0"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-database-compat.js"></script>
   <style>
-    body { font-family: Arial; text-align: center; background: #f4f9fc; padding: 2rem; }
-    input, button { padding: 1rem; width: 90%; max-width: 500px; font-size: 1rem; margin: 0.5rem; border-radius: 6px; border: 1px solid #ccc; }
-    img, canvas { max-width: 100%; margin-top: 1rem; border-radius: 8px; }
-    .result { color: #007c4d; font-weight: bold; margin-top: 1rem; }
+    body { font-family: Arial; text-align: center; background: #f2f7f9; padding: 2rem; }
+    input, button { padding: 1rem; font-size: 1rem; width: 90%; max-width: 500px; margin: 0.5rem; border-radius: 6px; border: 1px solid #ccc; }
+    img { margin-top: 1rem; max-width: 100%; border-radius: 10px; }
+    .log { color: #007c4d; margin-top: 1rem; font-weight: bold; }
   </style>
 </head>
 <body>
 
-  <h1>🌱 AgriNexus 실시간 작물 이미지 예측</h1>
+  <h1>🌾 AgriNexus Custom 작물 예측 + PDF 리포트 + Firebase 연동</h1>
 
   <input type="file" id="imgUpload" accept="image/*" />
   <img id="preview" style="display:none;" />
-  <button onclick="predict()">🔍 AI 예측 실행</button>
-
-  <div class="result" id="output">결과: 없음</div>
+  <input id="email" placeholder="📧 수신자 이메일" />
+  <button onclick="predictAndSend()">🔍 예측 + 저장 + PDF + 메일</button>
+  <div class="log" id="output"></div>
 
   <script>
+    const firebaseConfig = {
+      apiKey: "YOUR_API_KEY",
+      authDomain: "your-project.firebaseapp.com",
+      databaseURL: "https://your-project.firebaseio.com",
+      projectId: "your-project"
+    };
+    firebase.initializeApp(firebaseConfig);
+    const db = firebase.database();
+
     let model;
 
-    async function predict() {
+    async function predictAndSend() {
       const file = document.getElementById("imgUpload").files[0];
-      if (!file) return alert("이미지를 선택해주세요.");
+      const email = document.getElementById("email").value;
+      const img = document.getElementById("preview");
+
+      if (!file || !email) return alert("이미지 및 이메일을 입력하세요.");
 
       const reader = new FileReader();
       reader.onload = async () => {
-        const img = document.getElementById("preview");
         img.src = reader.result;
         img.style.display = "block";
 
         if (!model) {
-          model = await mobilenet.load();
+          model = await tf.loadGraphModel("https://your-storage.com/models/crop-detect/model.json");
         }
 
         img.onload = async () => {
-          const result = await model.classify(img);
-          document.getElementById("output").innerText =
-            result.length ? `결과: ${result[0].className} (${(result[0].probability * 100).toFixed(2)}%)` : "예측 실패";
+          const tensor = tf.browser.fromPixels(img).resizeNearestNeighbor([224, 224]).toFloat().expandDims();
+          const prediction = model.predict(tensor);
+          const arr = await prediction.data();
+          const crops = ["고추", "배추", "상추"];
+          const maxIdx = arr.indexOf(Math.max(...arr));
+          const resultText = `${crops[maxIdx]} (${(arr[maxIdx] * 100).toFixed(2)}%)`;
+
+          document.getElementById("output").innerText = "🌱 예측 결과: " + resultText;
+
+          // Firebase 저장
+          db.ref("cropReports").push({ email, result: resultText, time: new Date().toISOString() });
+
+          // PDF 생성
+          const { jsPDF } = window.jspdf;
+          const doc = new jsPDF();
+          doc.text("🌿 AgriNexus 작물 예측 보고서", 20, 20);
+          doc.text("수신자: " + email, 20, 40);
+          doc.text("예측 결과: " + resultText, 20, 50);
+          doc.text("생성 시각: " + new Date().toLocaleString(), 20, 60);
+
+          const blob = doc.output("blob");
+          const formData = new FormData();
+          formData.append("pdf", blob, "crop_report.pdf");
+          formData.append("email", email);
+
+          await fetch("https://your-server.com/send-report", {
+            method: "POST",
+            body: formData
+          });
+
+          document.getElementById("output").innerText += " ✅ PDF 메일 전송 완료!";
         };
       };
       reader.readAsDataURL(file);
